use jdk 8 methods